--- a/_config.yml
+++ b/_config.yml
@@ -40,8 +40,8 @@ avatar: "/img/avatar-icon.png"
 # Important: you must keep the "name" parameter, everything else you can remove
 author:
   name: Martin Cosgrave
-  email: "youremail@domain.com"
-  facebook: yourname  # eg. daattali
+  email: 
+  facebook:   # eg. daattali
   github: marsbard    # eg. daattali
   twitter:    # eg. daattali
   linkedin: in/martin-cosgrave-8690295  # eg. "pub/dean-attali/8/946/143"
