--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ baseurl: ""
 title: Martin Cosgrave
 
 # Short description of your site
-description: ECM, Java, Devops, and the occasional tune!
+description: Large cuppa Java in my hand, Devops shizzle is my bizzle.
 
 # --- Navigation bar options --- #
 
