--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ baseurl: ""
 title: Martin Cosgrave
 
 # Short description of your site
-description: Large cuppa Java in my hand, Devops shizzle is my bizzle.
+description: 
 
 # --- Navigation bar options --- #
 
