--- a/_config.yml
+++ b/_config.yml
@@ -64,7 +64,7 @@ url-pretty: "marsbard.github.io"  # eg. "deanattali.com/beautiful-jekyll"
 # --- Misc --- #
 
 # Fill in your Disqus shortname (NOT the userid) if you want to support Disqus comments
-#disqus: ""
+disqus: "marsbard"
 
 # Fill in your Google Analytics ID to track your website using GA
 #google_analytics: ""
